--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "query-string": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "sass": "^1.56.2",
