--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
     "sass": "^1.56.2",
     "swiper": "^8.4.5",
     "web-vitals": "^2.1.4"
