--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.4",
     "react-icons": "^4.7.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-youtube": "^10.1.0",
