--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movie-appv2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://skivadev.github.io/movie-appv2",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -10,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "gh-pages": "^5.0.0",
     "i18next": "^22.4.9",
     "query-string": "^8.0.0",
     "react": "^18.2.0",
@@ -25,6 +27,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
